--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ header {
   margin-bottom: 10px;
 }
 .sponsor img {
-  margin-right: -550px;
+  margin-right: -635px;
   max-width: clamp(140px, 18vw, 280px);
   height: auto;
 }
@@ -344,7 +344,7 @@ header {
 .slider {
   background-color: #f8f8f8;
   padding: 40px 0;
-  overflow: hidden;
+   overflow: hidden; 
 }
 .scrolling-row {
   display: flex;
@@ -497,7 +497,7 @@ header {
     gap: 0;
   }
 
-  .body {
+  .body{
     overflow-x: hidden;
   }
 
@@ -523,6 +523,7 @@ header {
     display: none;
   }
 
+  /* ... Sisa aturan lainnya ... */
   .dropdown-menu {
     width: 50vw;
   }
@@ -542,7 +543,7 @@ header {
 /* Untuk Mobile (<= 768px) */
 @media (max-width: 768px) {
   header {
-    top: 0px;
+   
     right: 20px;
   }
   .hero-container {
@@ -550,9 +551,10 @@ header {
     gap: 40px; /* Beri jarak antara judul dan sponsor */
     padding: 0 20px; /* Beri padding agar tidak terlalu mepet tepi */
   }
-  .body {
+   .body{
     overflow-x: hidden;
   }
+
 
   .hero-container h1,
   .sponsor img,
@@ -609,7 +611,7 @@ header {
   .mosaic {
     grid-template-columns: 1fr;
   }
-  .body {
+   .body{
     overflow-x: hidden;
   }
 
